--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
 				<div id="tab_spotlight" class="tab tab-actionable main-item">
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							Hold On to Your Bananas and Get Ready for a Wicked All Out Experience!
+						</h2>
+						<p class="spotlight-article-text">
+							The supernatural paranormal has never hit so heavy. No tinfoil hats here, aliens and ghosts exist and they all are coming for you! The exhilarating breakneck speed action, zany laughs, and heartfelt moments will definitely make this an occult classic. 
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/DAN_DA_DAN/article-media_01.jpg" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.app/anime/DAN-DA-DAN">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/DAN_DA_DAN/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">DAN DA DAN</h4>
+							</a>
+						</div>
+					</div>
+
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							My Guy’s Ult Is Causing Friendly Fire By Dodging So Hard!
 						</h2>
 						<p class="spotlight-article-text">
@@ -399,7 +419,7 @@
 							<a class="tile" href="https://kitsu.app/anime/mahoutsukai-no-yome-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/dark-gathering"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46279/poster_image/large-7f454e242f8934b587b4724d75f5e6f0.jpeg" alt="Dark Gathering"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/t-p-bon"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48047/poster_image/large-962ea2aed22ff4f540492603b087609a.jpeg" alt="T.P BON"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/t-p-bon"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48047/poster_image/large-389682cdd9a9d4ca95dd8baa91610696.jpeg" alt="T.P BON"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/chihayafuru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/6355/large.jpg" alt="Chihayafuru"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kaichou-wa-maid-sama"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4852/large.jpg" alt="Maid Sama!"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/natsume-yuujinchou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
@@ -450,7 +470,7 @@
 							<a class="tile" href="https://kitsu.app/anime/dr-stone-science-future"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48342/poster_image/large-402b1e3c7eb184c86cda7de478f5420d.jpeg" alt="Dr. STONE: SCIENCE FUTURE"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/honey-lemon-soda"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48587/poster_image/large-fed40384382974e5374d22736e814510.jpeg" alt="Honey Lemon Soda"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/guild-no-uketsukejou-desu-ga-zangyou-wa-iya-nanode-boss-wo-solo-tobatsu-shiyou-to-omoimasu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47752/poster_image/large-ce7bca7d0ddf650ad1fbb957373778fe.jpeg" alt="I May Be a Guild Receptionist, but I'll Solo Any Boss to Clock Out on Time"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/watashi-no-shiawase-na-kekkon-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47969/poster_image/large-dfaa55af7bb2b139ee136954949dbe4d.jpeg" alt="My Happy Marriage Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/watashi-no-shiawase-na-kekkon-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47969/poster_image/large-c847c028767f0559788ea5d08030b869.jpeg" alt="My Happy Marriage Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/salaryman-ga-isekai-ni-ittara-shitennou-ni-natta-hanashi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49065/poster_image/large-6951d9155e4f089760f12f02d8641341.jpeg" alt="Headhunted to Another World"></img></a>
 						</div><!-- tiled-list -->						
 						
@@ -475,7 +495,7 @@
 							<a class="tile" href="https://kitsu.app/anime/kobayashisan-Chi-no-Maidragon-Samishii-Gariya-no-Ryuu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49215/poster_image/large-fb412811c110701ab06169c3cd87529b.jpeg" alt=" Miss Kobayashi’s Dragon Maid: A lonely Dragon wants to be Loved"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/yuru-camp-season-4"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49325/poster_image/large-4b8a605660cc7e0d5fb2dfcace96f55f.jpeg" alt="Yuru Camp△ SEASON 4"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kakkou-no-iinazuke-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49067/poster_image/large-bdd44b01e38ffe6421814f41b9d1600f.jpeg" alt="A Couple of Cuckoos Season 2"></img></a>
-
+							<a class="tile" href="https://kitsu.app/anime/tondemo-skill-de-isekai-hourou-meshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48190/poster_image/large-e74370b05362c9216f97f5285e07c6dc.jpeg" alt="Campfire Cooking in Another World with my Absurd Skill Season 2"></img></a>
 							<!--
 								<a class="tile" href="https://kitsu.app/anime/go-toubun-no-hanayome"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48807/poster_image/large-5f3e16d73ca7960fde730dd53ff7a68d.jpeg" alt="Quintessential Quintuplets Hanayome"></img></a>
 							-->
@@ -529,6 +549,7 @@
 							<a class="tile" href="https://kitsu.app/anime/fullmetal-alchemist-brotherhood"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fullmetal-Alchemist_large.jpg" alt="Fullmetal Alchemist: Brotherhood"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/spice-and-wolf-shin-anime"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Spice-and-Wolf_2024_large.jpeg" alt="Spice and Wolf (New Anime)"></img>a</a>
 							<!-- <a class="tile" href="https://kitsu.app/anime/spice-and-wolf"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Spice-and-Wolf_large.jpg" alt="Spice and Wolf"></img></a> -->
+							<a class="tile" href="https://kitsu.app/anime/sousou-no-frieren"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Frieren_Large.jpeg" alt="Frieren"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/tengen-toppa-gurren-lagann"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Gurren-Lagann_large.jpg" alt="Gurren Lagann"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/ghost-in-the-shell-stand-alone-complex"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ghost-in-the-Shell_large.jpg" alt="Ghost in the Shell: Stand Alone Complex"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/shigatsu-wa-kimi-no-uso"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Your-Lie-in-April_large.jpg" alt="Your Lie in April"></img></a>
@@ -536,7 +557,6 @@
 							<a class="tile" href="https://kitsu.app/anime/new-game"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New-Game_large.jpg" alt="New Game!"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/magi-the-labyrinth-of-magic"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Magi_large.jpg" alt="Magi: The Labyrinth of Magic"></img><span class="tooltip">Magi: The Labyrinth of Magic</span></a>
 							<a class="tile" href="https://kitsu.app/anime/akagami-no-shirayuki-hime"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Snowwhite_large.jpg" alt="Snow White with the Red Hair"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/konosuba_large.jpg" alt="KonoSuba"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/sword-art-online"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Sword-Art-Online_large.jpg" alt="Sword Art Online"></img></a>
 						</div><!-- tiled-list -->
 						<button onclick="more_bygenre_btn()" id="more_bygenre_btn" class="btn-pill-full-width">Show more</button>
@@ -559,8 +579,8 @@
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Adventure</h4>
 							<div class="card-tiled-list">
-								<a class="tile" href="https://kitsu.app/anime/sousou-no-frieren"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Frieren_Large.jpeg" alt="Frieren"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
+								<a class="tile" href="https://kitsu.app/anime/dr-stone"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Dr-STONE_large.jpg" alt="Dr. STONE"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/dororo"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Dororo_large.jpg" alt="Dororo"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/seirei-no-moribito"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Moribito_large.jpg" alt="Moribito"></img></a>								
 								<!--
@@ -572,10 +592,11 @@
 							<h4 class="tile-card-heading">Comedy</h4>
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://kitsu.app/anime/saiki-kusuo-no-psi-nan-tv"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Saiki-K_large.jpg" alt="The Disastrous Life of Saiki K."></img></a>
+								<a class="tile" href="https://kitsu.app/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/konosuba_large.jpg" alt="KonoSuba"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/space-dandy"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Space-Dandy_large.jpg" alt="Space Dandy"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/gokushufudou"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Way-of-the-Househusband_Large.jpg" alt="The Way of the Househusband"></img></a>
-								<a class="tile" href="https://kitsu.app/anime/hinamatsuri"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Hinamatsuri_large.jpg" alt="HINAMATSURI"></img></a>
 								<!--									
+									<a class="tile" href="https://kitsu.app/anime/hinamatsuri"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Hinamatsuri_large.jpg" alt="HINAMATSURI"></img></a>	
 									<a class="tile" href="https://kitsu.app/anime/the-devil-is-a-part-timer"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Devil-is-a-Part-Timer_large.jpg" alt="The Devil is a Part-Timer!"></img></a>
 								-->
 							</div>	
@@ -602,8 +623,8 @@
 							<h4 class="tile-card-heading">Drama</h4>
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://kitsu.app/anime/kusuriya-no-hitorigoto"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Apothecary-Diaries_large.jpeg" alt="The Apothecary Diaries"></img></a>
-								<a class="tile" href="https://kitsu.app/anime/nagi-no-asukara"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Nagi-no-Asukara_large.jpg" alt="A Lull in the Sea"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/violet-evergarden"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Violet-Evergarden_large.jpg" alt="Violet Evergarden"></img></a>
+								<a class="tile" href="https://kitsu.app/anime/nagi-no-asukara"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Nagi-no-Asukara_large.jpg" alt="A Lull in the Sea"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/shinsekai-yori"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shinsekai-yori_large.jpg" alt="From the New World"></img></a>
 								<!--
 									<a class="tile" href="https://kitsu.app/anime/death-parade"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Death-Parade_large.jpg" alt="Death Parade"></img></a>
