--- a/index.html
+++ b/index.html
@@ -638,7 +638,16 @@
 									<a class="tile" href="https://kitsu.app/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu"><img  loading="Lazy" class="tile-image" src="" alt="How Not to Summon a Demon Lord"></img></a>
 								-->
 							</div>
-						</div><!--Drama-->
+						</div><!--Ecchi-->
+						<div class="tiled-list-card">
+							<h4 class="tile-card-heading">Fever Dream</h4>
+							<div class="card-tiled-list">						
+								<a class="tile" href="https://kitsu.app/anime/DAN-DA-DAN"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/DAN-DA-DAN_large.jpeg" alt="DAN DA DAN"></img></a>
+								<a class="tile" href="https://kitsu.app/anime/kill-la-kill"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kill-la-Kill_large.jpg" alt="Kill la Kill"></img></a>
+								<a class="tile" href="https://kitsu.app/anime/panty-stocking-with-garterbelt"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Panty-Stocking-with-Garterbelt_large.jpg" alt="Panty & Stocking with Garterbelt"></img></a>
+								<a class="tile" href="https://kitsu.app/anime/flcl"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/FLCL_large.jpeg" alt="FLCL"></img></a>
+							</div>
+						</div><!--Fever_Dream-->
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Fantasy</h4>
 							<div class="card-tiled-list">						
