--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 							<a class="tile" href="https://kitsu.app/anime/natsume-yuujinchou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
 							<!--
 								<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
-
+							
 								<a class="tile" href="https://kitsu.app/anime/yozakura-san-chi-no-daisakusen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46869/poster_image/large-2387b561d9afebe2d646de3b2cff35af.jpeg" alt="Mission: Yozakura Family"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/oshi-no-ko-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47659/poster_image/large-8881975ead44514c3d76220a7b86e19d.jpeg" alt="Oshi no Ko Season 2"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/Sword-Art-Online-Alternative-Gun-Gale-Online-II"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47748/poster_image/large-29fc5ecaddc0413da4910932f7747082.jpeg" alt="Sword Art Online Alternative: Gun Gale Online II"></img></a>
@@ -1154,12 +1154,12 @@
 							</div>
 						</div>
 					</a>			
-					<a class="lf-link" href="https://twitter.com/WTK">
+					<a class="lf-link" href="https://bsky.app/profile/wtk.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-WTK.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Media & Licensing Updates</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @WTK</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @wtk.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1330,12 +1330,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@tacotheweeb">
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@ohhtako">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tacotheweeb.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">TacoTheWeeb</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @tacotheweeb</span>
+								<span class="lf-displayname">ohhtako</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @ohhtako</span>
 							</div>
 						</div>
 					</a>
@@ -1531,12 +1531,12 @@
 				-->
 				<div class="lf-list">
 					<h3 class="lf-heading">Artists & Fanart</h3>							
-					<a class="lf-link" href="https://twitter.com/Cheon1986">
+					<a class="lf-link" href="https://bsky.app/profile/hxxg.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Cheon1986.png"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">HxxG / ホン</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @Cheon1986</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @hxxg.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1558,12 +1558,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://twitter.com/yohan1754">
+					<a class="lf-link" href="https://bsky.app/profile/yohan1754.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Free-Style.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Free Style</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @yohan1754</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @yohan1754.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1586,66 +1586,66 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/1TZAH">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/1tzah.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-1TZAH.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">▓ 𝙸𝚝𝚣𝚊𝚑 ▒</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @1TZAH</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @1tzah.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/pixeljess">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/pixeljess.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/pixeljess.png"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Pixel Jess</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @pixeljess</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @pixeljess.bsky.social</span>
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/leaphere_">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/leaphere.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/leaphere_.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">✧ Leaphere</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @leaphere_</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @leaphere.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/hyogonosuke">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/hyogonosuke.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/hyogonosuke.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">ヒョーゴノスケ</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @hyogonosuke</span>
+								<span class="lf-displayname">HYOGONOSUKE</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @hyogonosuke.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/aywakutakuay">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/waker.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-aywakutakuay.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">w a k e r</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @aywakutakuay</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @waker.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/uchiha_jake">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/uchihajake.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/uchiha_jake.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">uchiha_jake</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @uchiha_jake</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @uchihajake.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/lelastslayer">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/lelastslayer.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/lelastslayer.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Slayer</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @lelastslayer</span>
+								<span class="lf-displayname">Lelastslayer</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @lelastslayer.bsky.social</span>
 							</div>
 						</div>
 					</a>					
@@ -1658,31 +1658,31 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/aosora5088">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/aosorabluesky.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-aosora5088.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">あおそら-aosora-</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @aosora5088</span>
+								<span class="lf-displayname">aosora</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @aosorabluesky.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/YotsumiShiro">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/yotsumishiro.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/YotsumiShiro.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">四海紫郎</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @YotsumiShiro</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @yotsumishiro.bsky.social</span>
 							</div>
 						</div>
 					</a>
 					
-					<a class="lf-link more-lf-artistfanart" href="https://twitter.com/cutesexyrobutts">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/cutesexyrobutts.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Cutesexyrobutts.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Cutesexyrobutts <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @cutesexyrobutts</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @cutesexyrobutts.bsky.social</span>
 							</div>
 						</div>
 					</a>					
@@ -1695,48 +1695,48 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://twitter.com/arachnart33">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/arachnart.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-arachnart33.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">arachnart <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @arachnart33</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @arachnart.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://twitter.com/Snegovski9623">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/snegovski9623.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Snegovski9623.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">SNEGOVSKI <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @Snegovski9623</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @snegovski9623.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/bluethebone">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/bluethebone.bsky.social">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-bluethebone.jpg"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/propic-bluethebone.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">ʙʟᴜᴇᴛʜᴇʙᴏɴᴇ <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @bluethebone</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @bluethebone.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/PinkSeito">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/pinkseito.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-PinkSeito.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Orphen <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @PinkSeito</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @pinkseito.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/bartolomeobari2">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/bartolomeobari.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-bartolomeobari2.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">bartolomeobari <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @bartolomeobari2</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @bartolomeobari.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1749,21 +1749,21 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/TheGoldenSmurf">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/thegoldensmurf.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/TheGoldenSmurf.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">TheGoldenSmurf <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @TheGoldenSmurf</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @thegoldensmurf.bsky.social</span>
 							</div>
 						</div>
 					</a>										
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/hews__">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/hews1.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-hews__.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">hews <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @hews__</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @hews1.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1776,30 +1776,30 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/HGDemonBoy">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/hornygraphite.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/HGDemonBoy.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">HGDemonBoy <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @HGDemonBoy</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @hornygraphite.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/SemiDraws">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/semidraws.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/SemiDraws.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">SemiDraws <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @SemiDraws</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @semidraws.bsky.social</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-artistfanart" href="https://x.com/EchoSaber1">
+					<a class="lf-link more-lf-artistfanart" href="https://bsky.app/profile/echosaber.bsky.social">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/EchoSaber1.png"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/EchoSaber.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">EchoSaber <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @EchoSaber1</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> @echosaber.bsky.social</span>
 							</div>
 						</div>
 					</a>					
